--- a/index.html
+++ b/index.html
@@ -4,11 +4,70 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-    <p>hiii react</p> 
+    <title>Vite + React + TS - Advanced Template</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+      body {
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
+      }
+      nav {
+        background-color: #333;
+        padding: 1rem;
+      }
+      nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: space-around;
+      }
+      nav ul li {
+        display: inline;
+      }
+      nav ul li a {
+        color: white;
+        text-decoration: none;
+        font-weight: 500;
+        padding: 0.5rem 1rem;
+      }
+      nav ul li a:hover {
+        background-color: #555;
+        border-radius: 5px;
+      }
+      main {
+        padding: 1rem;
+      }
+      footer {
+        text-align: center;
+        background-color: #333;
+        color: white;
+        padding: 1rem;
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
+    <!-- Navbar -->
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- Root Div for React Application -->
     <div id="root"></div>
+
+    <!-- Footer -->
+    <footer>
+      <p>&copy; 2024 My Company Name. All rights reserved.</p>
+    </footer>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
